[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "isola"
version = "0.2.0"
description = "Async Python bindings for the Isola runtime"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://brian14708.github.io/isola/"
Source = "https://github.com/brian14708/isola"

[tool.maturin]
python-source = "python"
module-name = "isola._isola"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812", "S101", "CPY",
  "D10", "D203", "D205", "D213",
  "FIX", "TD002", "TD003",
  "PLR09", "PLR2004", "C901",
]
extend-safe-fixes = ["TC", "F401"]
preview = true
future-annotations = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S311", "PLC2701", "PLR2004", "RUF029"]

[tool.ruff.lint.isort]
extra-standard-library = ["typing_extensions"]
split-on-trailing-comma = false

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["typing_extensions.TypedDict"]
exempt-modules = ["typing", "typing_extensions"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.TypedDict".msg = "Use typing_extensions.TypedDict instead."
"typing_extensions.AsyncContextManager".msg = "Use contextlib.AbstractAsyncContextManager instead."
"typing_extensions.AsyncGenerator".msg = "Use collections.abc.AsyncGenerator instead."

[tool.ruff.format]
preview = true
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.mypy]
files = ["crates/python-sdk/python", "crates/python-sdk/tests"]
strict = true
python_version = "3.10"
disable_error_code = [
  "decorated-any",
  "explicit-any",
  "any",
]

[tool.pyright]
venv = ".venv"
venvPath = "../.."
include = ["python", "tests"]
typeCheckingMode = "strict"
enableExperimentalFeatures = true
reportMissingModuleSource = false

[dependency-groups]
dev = [
  { include-group = "test" },
]
test = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
