[package]
name = "promptkit-request"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[features]
default = ["gzip", "tls"]
tls = ["reqwest/rustls-tls-native-roots"]
gzip = ["reqwest/gzip"]

[dependencies]
bytes = { workspace = true }
dashmap = { workspace = true }
fastant = { workspace = true, features = ["atomic"] }
futures = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true, features = ["semconv_experimental"] }
pin-project-lite = { workspace = true }
reqwest = { workspace = true, features = ["http2", "stream", "socks"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true, features = ["handshake"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
url = { workspace = true }
