[package]
name = "promptkit-server"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[package.metadata.cargo-machete]
ignored = ["log", "metrics", "prost", "tonic-prost"]

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["http2"] }
bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
log = { workspace = true, features = ["release_max_level_debug"] }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
mimalloc = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic", "gzip-tonic", "http-proto", "http-json", "reqwest-client", "reqwest-rustls", "tokio"] }
opentelemetry-semantic-conventions = { workspace = true, features = ["semconv_experimental"] }
opentelemetry_sdk = { workspace = true, features = ["experimental_trace_batch_span_processor_with_async_runtime", "rt-tokio"] }
parking_lot = { workspace = true }
pin-project-lite = { workspace = true }
promptkit = { workspace = true }
promptkit-cbor = { workspace = true, features = ["prost"] }
promptkit-request = { workspace = true }
promptkit-trace = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rlimit = { workspace = true }
rmcp = { workspace = true, features = ["transport-streamable-http-server"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tonic = { workspace = true, features = ["gzip", "router", "server", "tls-native-roots"] }
tonic-prost = { workspace = true }
tonic-reflection = { workspace = true }
tonic-web = { workspace = true }
tower-http = { workspace = true, features = ["fs", "trace"] }
tracing = { workspace = true, features = ["release_max_level_debug"] }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "parking_lot"] }
zip = { workspace = true, features = ["deflate"] }

[build-dependencies]
tonic-prost-build = { workspace = true }

[lints]
workspace = true
