[package]
name = "isola-server"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["http2", "ws"] }
bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
isola = { workspace = true, features = ["cbor", "request", "request-gzip", "request-tls", "trace"] }
metrics-exporter-prometheus = { workspace = true }
mimalloc = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic", "gzip-tonic", "http-proto", "http-json", "reqwest-client", "reqwest-rustls", "tokio"] }
opentelemetry-semantic-conventions = { workspace = true, features = ["semconv_experimental"] }
opentelemetry_sdk = { workspace = true, features = ["experimental_trace_batch_span_processor_with_async_runtime", "rt-tokio"] }
parking_lot = { workspace = true }
pin-project-lite = { workspace = true }
rlimit = { workspace = true }
rmcp = { workspace = true, features = ["transport-streamable-http-server"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tracing = { workspace = true, features = ["release_max_level_debug"] }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "parking_lot"] }

[lints]
workspace = true
