[package]
name = "xtask"
version.workspace = true
edition.workspace = true
publish = false
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
glob = { workspace = true }
wasi-preview1-component-adapter-provider = { workspace = true }
wit-component = { workspace = true }
xshell = { workspace = true }
