[project]
name = "promptkit-tests-rpc"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "betterproto[compiler]>=2.0.0b7",
    "promptkit-py",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-httpbin>=2.1.0",
]

[tool.pytest.ini_options]
testpaths = ["src/"]
asyncio_default_fixture_loop_scope = "module"
asyncio_default_test_loop_scope = "module"
