[project]
name = "isola-tests-rpc"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mcp>=1.21.2",
    "isola-py",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-httpbin>=2.1.0",
    "websockets>=15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["src", "data"]

[tool.pytest.ini_options]
testpaths = ["src/"]
asyncio_default_fixture_loop_scope = "module"
asyncio_default_test_loop_scope = "module"

[tool.pyright]
venv = "."
venvPath = "../../.venv"
