[package]
name = "promptkit_python"
version = "0.1.0"
edition = "2021"

[dependencies]
rustpython-pylib = { version = "0.3.0", features = ["freeze-stdlib"] }
rustpython-stdlib = "0.3.0"
rustpython-vm = { version = "0.3.0", features = ["freeze-stdlib", "serde"] }
serde = "1.0.193"
serde_json = "1.0.108"
thiserror = "1.0.51"
wit-bindgen = "0.16.0"
