[package]
name = "promptkit_python"
version.workspace = true
edition.workspace = true

[dependencies]
pyo3 = { version = "0.20.2", features = ["abi3-py311"] }
serde = "1.0.196"
serde_json = "1.0.113"
thiserror = "1.0.56"
wit-bindgen = "0.17.0"

[build-dependencies]
flate2 = "1.0.28"
reqwest = { version = "0.11.23", default-features = false, features = ["blocking", "rustls-tls"] }
tar = "0.4.40"
